# nutrakinetics-studio

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
config/: parameters.base.yaml  supplement_parameter_catalog.yaml  supplements.yaml
docs/: github_setup.md  spec_model.md  spec_product.md  spec_references.md  spec_roadmap.md  spec_ui.md
models/: __init__.py  _compat.py  calibration.py  interfaces.py  parameters.py  scenario_compare.py  simulation.py  supplements.py
models/processes/: __init__.py  human_common.py
models/supplement_modules/: __init__.py  base.py  default.py  engine.py
scripts/: fit_interactions.py
src/nutrakinetics_studio/: __init__.py  calibration.py  parameters.py  paths.py  scenario_compare.py  simulation.py  supplements.py
src/nutrakinetics_studio/processes/: __init__.py  human_common.py
src/nutrakinetics_studio/supplement_modules/: __init__.py  base.py  default.py  engine.py
src/nutrakinetics_studio/web/: __init__.py  streamlit_app.py
tests/: test_calibration_hooks.py  test_import_and_entrypoints.py  test_parameters_and_structure.py  test_scenario_compare.py  test_simulation_smoke.py
